@@ -2,11 +2,14 @@ AUX 2.20120215/openstackguestagent.fc 531 SHA256 63651904720e7186ff4c56444cece39
 AUX 2.20120215/openstackguestagent.te 3571 SHA256 8cc960cf4bd75c18753f619845b15d878941615f6e8707a96c38790ff82acc3c SHA512 b0960cf69354ac6716954d180817df33ab56c665f21ef6eb742b2d4d3fdb2f9e6b540a1e6caae57144682317ab8050399315e646c2c860030ee49e545423af2b WHIRLPOOL d2b563d18dc305ff781823399a3d226813960dc32e0f20d0e13dbc06afd09fba71a90f07703ac8e9d38808c7d8cb370517ec1099ebc920b5e629d10f92abbc1a
 AUX 2.20120725/openstackguestagent.fc 531 SHA256 63651904720e7186ff4c56444cece399b04f1802170edbd49332d7514e2f84fa SHA512 db1ddd8557644d5d66b52a1d40430fe126545b646379124aace161bd5f4a4020623fa2f45b5a3aeae1a506bf457d205d9372ff530f6d1572992e10b5e57d30f2 WHIRLPOOL df5bb0226e1ea4ec4f73005e728f31793bc29f694eb6c5fa649c688d8017af392b416b195f5b747de99c46878a18bf25a5cf1889754804eeaba1eb7085eccd77
 AUX 2.20120725/openstackguestagent.te 3571 SHA256 8cc960cf4bd75c18753f619845b15d878941615f6e8707a96c38790ff82acc3c SHA512 b0960cf69354ac6716954d180817df33ab56c665f21ef6eb742b2d4d3fdb2f9e6b540a1e6caae57144682317ab8050399315e646c2c860030ee49e545423af2b WHIRLPOOL d2b563d18dc305ff781823399a3d226813960dc32e0f20d0e13dbc06afd09fba71a90f07703ac8e9d38808c7d8cb370517ec1099ebc920b5e629d10f92abbc1a
+AUX 9999/openstackguestagent.fc 531 SHA256 63651904720e7186ff4c56444cece399b04f1802170edbd49332d7514e2f84fa SHA512 db1ddd8557644d5d66b52a1d40430fe126545b646379124aace161bd5f4a4020623fa2f45b5a3aeae1a506bf457d205d9372ff530f6d1572992e10b5e57d30f2 WHIRLPOOL df5bb0226e1ea4ec4f73005e728f31793bc29f694eb6c5fa649c688d8017af392b416b195f5b747de99c46878a18bf25a5cf1889754804eeaba1eb7085eccd77
+AUX 9999/openstackguestagent.te 3571 SHA256 8cc960cf4bd75c18753f619845b15d878941615f6e8707a96c38790ff82acc3c SHA512 b0960cf69354ac6716954d180817df33ab56c665f21ef6eb742b2d4d3fdb2f9e6b540a1e6caae57144682317ab8050399315e646c2c860030ee49e545423af2b WHIRLPOOL d2b563d18dc305ff781823399a3d226813960dc32e0f20d0e13dbc06afd09fba71a90f07703ac8e9d38808c7d8cb370517ec1099ebc920b5e629d10f92abbc1a
 DIST patchbundle-selinux-base-policy-2.20120215-r14.tar.bz2 55867 SHA256 1327b2e24c3eeaab957f483e99f3b03961dc508bea58a936a898407a03d2f88a SHA512 8895d71ac7662bd1e4d99826f8eb99bb24ab4b79270fc7944d0a8d1681dd0c87cd4c689662d19802ceaf1357493c602414708c61bc29aa8e777d204aad7992a9 WHIRLPOOL b9b16ee1ed7fb138d97b9b74808834b2aa1c1cea12b63e3ef7e49436e91f7e9eb7d69852b1c18ce7fbfbfaffe56fb7cf2114e67b3f973503a4b1ef79de761213
 DIST patchbundle-selinux-base-policy-2.20120725-r5.tar.bz2 46546 SHA256 ac46f21fd5be9588f7462b9ec41a9033f1c0347f46e01b6f9477fb381779ec92 SHA512 3ac3f06cdf7ff645d5b1db7430e9857eb2b55cc6e522ab96300e5120f390f905f3ce614973eb3fd03f0f28e25eebad53517c91b69bba191dc7ddc4e97a3f1756 WHIRLPOOL ed75b62a29a5c9aba2b4da87b2845609ce89ce288f245430bb7dc34504dfa84a7261e40c3f6b776af041d219ac6ba7ef501bdacda56488451b2cb6d8b5051b9e
 DIST refpolicy-2.20120215.tar.bz2 589917 SHA256 6df77faf62f73bd1f6e3bfca3fa2f77cdfd2cada94a7dcc4816ed9bbcf3545dc SHA512 47c84e29bd4f9f24b20d7ad86ccc9ef6619af3256b3d8590239165e9ea3b1fb45ceb105517b46a969bff2009b5f34d50c2f2d244e80080d9b667c51b11dcaf81 WHIRLPOOL ec038e60cda6dedea008347b6b5dd82d07b242d5b30921cb0912dc8712aa3db8a108c9f374bb3690328cef3cd531b251761cddb5410c1a09d7ab20654a06e551
 DIST refpolicy-2.20120725.tar.bz2 594120 SHA256 7cd46ed908a4001368e6509d93e306ec6c9af2bfa6b70db88c9eaaefe257c635 SHA512 9cbe27fe30460c018da2bb3d94f321d656a259bf4f2e7ce6c2b015d02b5801de8a68c765c154c30ba5abf4f986957c9f303fc95b453f53db4fc4040443512333 WHIRLPOOL 107c10e89e99a3c63f8a806989e869dffd5baca1b9e41e2b02b12067a796d11abc87ac41a9c44a44a61215ed36df127f79e045b00cfb67d3c5318a766ff78b89
 EBUILD selinux-openstack-guest-agent-2.20120215-r14.ebuild 397 SHA256 eb4a4ae14b23c994333884b2deef47f04b5c29cbcf4c9146993cf86a3f0a161f SHA512 3a657d211c357800b075d2ceaa3af1d26f12768c5beb81e3b4347940f4cd1e9e829e437fb42ea46341d3f19c5990b97de8fb45e7e7abe4dea0b331da7c8d3ca5 WHIRLPOOL b626d66691b7feadb6f683ba798bd401919d4daa105d15fe2b6e6196b6e27eda2c450a02ba5f01cd36342a66835e769658f8a7b8b0f0a5712aa79c257549d3c4
 EBUILD selinux-openstack-guest-agent-2.20120725-r5.ebuild 397 SHA256 eb4a4ae14b23c994333884b2deef47f04b5c29cbcf4c9146993cf86a3f0a161f SHA512 3a657d211c357800b075d2ceaa3af1d26f12768c5beb81e3b4347940f4cd1e9e829e437fb42ea46341d3f19c5990b97de8fb45e7e7abe4dea0b331da7c8d3ca5 WHIRLPOOL b626d66691b7feadb6f683ba798bd401919d4daa105d15fe2b6e6196b6e27eda2c450a02ba5f01cd36342a66835e769658f8a7b8b0f0a5712aa79c257549d3c4
-MISC ChangeLog 410 SHA256 f87c908102493b8efbe49455e65515b789c9777ecfd0133e41cbe09e6ed605b1 SHA512 e5d9069eaec8229972367d12971756df73726815d55450776a3bae3fccbfdf01e9fce8ceea87da592b6e8139fa3290b07c79d26471e54c2431b86bc2c79d130a WHIRLPOOL 0acd3e491724c6610d518b8c1b3a241ad23f9a635537258fa31d9e5c790c8a562b4ffca9b7de37011b7b12e375ee908c6cea0ab4419e16167e143f8ef21cce34
+EBUILD selinux-openstack-guest-agent-9999.ebuild 397 SHA256 eb4a4ae14b23c994333884b2deef47f04b5c29cbcf4c9146993cf86a3f0a161f SHA512 3a657d211c357800b075d2ceaa3af1d26f12768c5beb81e3b4347940f4cd1e9e829e437fb42ea46341d3f19c5990b97de8fb45e7e7abe4dea0b331da7c8d3ca5 WHIRLPOOL b626d66691b7feadb6f683ba798bd401919d4daa105d15fe2b6e6196b6e27eda2c450a02ba5f01cd36342a66835e769658f8a7b8b0f0a5712aa79c257549d3c4
+MISC ChangeLog 639 SHA256 c1dcfb903424e2121bb9ba6771df03dd40f819e15e944d61d49ffd452080e532 SHA512 48a39c040b3cbba5a824de488e0e131e59a74bc7d12356141fb1e45a080dc47c9ede457fc9db2f4bf36231a1546214a61ed026f0a35961138ed74f740ba2ac94 WHIRLPOOL 5b6291f45104420ebbd2b9ec9db066c5ab69a20ae96907758643d121ea489da8b2898a345d740e22ff2b5af71acb7669b873c4a0831b0aa10e09058c2e382534
 MISC metadata.xml 281 SHA256 7263a2fe0ca7c464ee994094559777486f36d98c3d3634c29bdf3217f81c5e82 SHA512 2db10cb55601f8df8d48978dcc5c5380b6f15ce3a1fb6cc592f1ab2d5689c7f51ef567d862d8289f7161d3ebe6a3fa97da6e6974d8d9b5887759ce01b60f08af WHIRLPOOL 0810230310a8648b6080f7c1d864a4b3079c8b2ac7e6e5b22dc7686f15571cb81770cef7d29a2d4e14f500f1916c576bef5b0da30980565b9526cda25ff9bd3d
